# world_model_tetsugo

./: .gitattributes  .gitignore  pyproject.toml
conf/: config.yaml
conf/data/: data.yaml
conf/model/: model_config.yaml
conf/test/: test_config.yaml
conf/train/: train_config.yaml
conf/wm_model/: model_config.yaml
result/model/: rssm_world_model_training.safetensors  rssm_world_model_training_amplified_loss.safetensors
result/normalize/: ota_data_normalize_config.json
scripts/: train.py  wm_predict.py
scripts/utils/: load_model.py  prepare_data.py  prepare_normalizer.py
slurm_logs/: 353.out  355.out
src/config/: config.py  model_config.py  result_config.py  test_config.py  train_config.py
src/utils/data_process/: blosc_file_handler.py  data_loader.py  dataset.py  load_data.py
src/utils/normalizer/: normalizer.py
src/utils/tester/: wm_predictor.py
src/utils/train/: loss_func.py  save_model.py  trainer.py
src/utils/trainer/: trainer.py
src/utils/visualize/: print_model.py  wm_recon_visualizer.py
src/world_model/model/: rssm.py  vision_decoder.py  vision_encoder.py  world_model.py
src/world_model/model/common/: build_mlp.py  get_conv_shape.py
src/world_model/model/utils/: build_mlp.py
tools/: concatenate.sh  record.sh  slurm_debug.sh  train_slurm.sh
