[project]
name = "world-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "lerobot-utils",
]

[tool.uv.sources]
lerobot-utils = { git = "https://github.com/keio-crl/lerobot-utils.git", tag = "v0.2.0" }

[dependency-groups]
dev = []
